--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+/* FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap');
+
+/* VARIABLES */
+:root{
+  /* Colors */
+  --mauve: #9D8189;
+  --pink: #F4ACB7;
+  --soft-pink: #FFCAD4;
+  --softer-pink: #FFE5D9;
+  --light-blue: #D8E2DC;
+  --blackish: #090302;
+  /* Fonts */
+  --regular-text: 'Montserrat';
+  --brand-name: 'Monsieur La Doulaise';
+}
+/* NAVBAR STYLE */
+.navbar{
+  background-color: var(--mauve);
+}
+.navbar-brand{
+  font-size: 2em;
+}
+.nav-item{
+  font: var(--regular-text);
+  font-size: 1em;
+}
+.btnCart{
+  background-color: var(--pink);
+  border: 2px solid var(--light-blue);
+  border-radius: 7px;
+  padding: 0.6em 0.8em;
+  transition: all 0.4s linear;
+}
+.btnCart:hover{
+  background-color: var(--light-blue);
+  border: 2px solid var(--pink);
+}
+.simple-text{
+  font: var(--regular-text);
+  font-size: 1.5em;
+  color: var(--blackish);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 1em;
 }
