--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -4,8 +4,10 @@
     border-radius: 7px;
     padding: 0.6em 0.8em;
     transition: all 0.4s linear;
+    margin-top: 0.2em;
 }
 .btnCart:hover{
     background-color: var(--light-blue);
     border: 2px solid var(--pink);
+    box-shadow:0px 0px 20px 3px var(--pink) inset
 }
