Correcciones de css y flipcard agregada al detalle de producto

--- a/src/components/Counter/counter.css
+++ b/src/components/Counter/counter.css
@@ -8,8 +8,11 @@
     font-family: var(--regular-text);
     font-size: 1em;
     color: var(--blackish);
+    margin: 0;
 }
 .counter-btn{
-    font-size: 0.8em;
+    font-family: var(--regular-text);
+    font-weight: bold;
+    font-size: 0.9em;
     color: var(--blackish);
 }
