--- a/src/App.css
+++ b/src/App.css
@@ -26,15 +26,10 @@ body {
 /* BUTTON STYLE */
 .btn1{
   background-color: var(--pink);
-  border: 2px solid var(--light-blue);
+  border: 2px solid var(--mauve);
   border-radius: 7px;
-  padding: 0.6em 0.8em;
-  transition: all 0.4s linear;
-}
-.btn1:hover{
-  background-color: var(--light-blue);
-  border: 2px solid var(--pink);
-  box-shadow:0px 0px 20px 3px var(--pink) inset;
+  padding: 0.2em auto;
+  margin: 0 0.2em 0 0.2em;
 }
 .btn2{
   background-color: white;
@@ -42,19 +37,19 @@ body {
   padding: 0.6em 0.8em;
 }
 .btnDetail{
+  color: var(--blackish);
   width: auto;
   height: 3em;
   background-color: var(--pink);
-  border: 2px solid var(--light-blue);
+  border: 2px solid var(--mauve);
   border-radius: 7px;
   padding: 0.6em 0.8em;
   transition: all 0.4s linear;
-  margin: 0.2em auto 0.4em auto;
+  margin: 0 auto 0 auto;
 }
 .btnDetail:hover{
   background-color: var(--light-blue);
   border: 2px solid var(--pink);
-  box-shadow:0px 0px 20px 3px var(--pink) inset;
 }
 /* TEXT STYLE */
 .prodTitleText{
@@ -105,18 +100,16 @@ body {
   padding: 1em;
 }
 .card:hover{
-  box-shadow: 2px 0px 19px 7px rgba(157,129,137,0.69) inset;
--webkit-box-shadow: 2px 0px 19px 7px rgba(157,129,137,0.69) inset;
--moz-box-shadow: 2px 0px 19px 7px rgba(157,129,137,0.69) inset;
-  /* box-shadow: 2px 0px 19px 7px rgba(244,172,183,0.69) inset;
--webkit-box-shadow: 2px 0px 19px 7px rgba(244,172,183,0.69) inset;
--moz-box-shadow: 2px 0px 19px 7px rgba(244,172,183,0.69) inset; */
+  box-shadow: 2px 0px 19px 7px rgba(244,172,183,0.69);
+-webkit-box-shadow: 2px 0px 19px 7px rgba(244,172,183,0.69);
+-moz-box-shadow: 2px 0px 19px 7px rgba(244,172,183,0.69);
 }
 /* IMAGES */
 .prodImg{
   display: flex;
   justify-content: center;
-  max-height: 17em;
+  /* max-height: 20em; */
+  width: 100%;
 }
 /* ITEM LIST CONTAINER */
 .itemList{
@@ -125,6 +118,47 @@ body {
   gap: 0.5em;
 }
 .prodData{
-  margin: 0;
-  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+/* FLIP CARD */
+.flip-card {
+  background-color: transparent;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  max-height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+.imgFlip{
+  max-height: 24em;
 }
