--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,13 +1,14 @@
 .btnCart{
+    color: var(--blackish);
     background-color: var(--pink);
-    border: 2px solid var(--light-blue);
+    border: 1px solid var(--light-blue);
     border-radius: 7px;
-    padding: 0.6em 0.8em;
+    padding: 0.6em 0.7em;
     transition: all 0.4s linear;
     margin-top: 0.2em;
 }
 .btnCart:hover{
     background-color: var(--light-blue);
-    border: 2px solid var(--pink);
-    box-shadow:0px 0px 20px 3px var(--pink) inset
+    border: 1px solid var(--pink);
+    box-shadow:0px 0px 20px 1px var(--pink) inset
 }
