--- a/src/components/Counter/counter.css
+++ b/src/components/Counter/counter.css
@@ -5,8 +5,8 @@
     text-align: center;
 }
 .counter-text{
-    font-family: var(--regular-text);
-    font-size: 1em;
+    font-family: var(--serif-text);
+    font-size: 0.9em;
     color: var(--blackish);
     margin: 0;
 }
