--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,4 +1,7 @@
 .btnCart{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     color: var(--blackish);
     background-color: var(--pink);
     border: 1px solid var(--light-blue);
@@ -6,8 +9,20 @@
     padding: 0.6em 0.7em;
     transition: all 0.4s linear;
     margin-top: 0.2em;
+    max-width: max-content;
 }
 .btnCart:hover{
     background-color: var(--light-blue);
     border: 1px solid var(--pink);
+}
+.widgetNumber{
+    text-decoration: none;    
+    font-family: var(--brand-name);
+    font-weight: 600;
+    color: var(--blackish);
+    padding-right: 0.3em;
+    margin: auto;
+}
+.widgetNumber:hover{
+    color: var(--blackish);
 }
