--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar{
-    background-color: var(--mauve);
+    flex-wrap: wrap;
 }
 .navbar-brand{
     font-family: var(--brand-name);
@@ -18,4 +18,10 @@
 }
 .nav-link:hover{
     text-shadow: 0px 1px 14px rgba(248,201,208,1);
+}
+.navbar-band{
+    background-color: var(--mauve);
+    height: 0.2em;
+    width: 100vw;
+    margin-top: 0.6em;
 }
