Funcion del Cart solucionada y algo de estilos

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   --blackish: #090302;
   /* Fonts */
   --regular-text: 'Montserrat';
-  --brand-name: 'Playfair Display', serif;
+  --brand-name: 'Ovo', serif;
   --serif-text: 'Ovo', serif;
 }
 body {
