--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,3 +1,12 @@
 .checkout{
     margin: 3rem auto 2rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.checkout-title{
+    font-family: var(--brand-name);
+    color: var(--blackish);
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
 }
